# Culinary-Canvas

./: .env.example  .gitignore  README.md  javoblar.txt  pyproject.toml
common/: models.py
core/: auth.py  celery.py  jazzmin_conf.py  logging.py  settings.py  urls.py
recipes/: admin.py  choices.py  models.py  publish_old_drafts.py  signals.py  translation.py  urls.py
recipes/migrations/: 0001_initial.py  0002_initial.py  0003_category_name_en_category_name_ru_category_name_uz_and_more.py
recipes/serializers/: __init__.py  category.py  comment.py  rating.py  recipe.py
recipes/views/: __init__.py  category_views.py  comment_views.py  rating.py  recipe_views.py
users/: admin.py  manager.py  models.py  serializers.py  tasks.py  translation.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_user_first_name_en_user_first_name_ru_and_more.py
